[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ilya-4real <ilya.chernishyov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.2.1"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
